v5.0.7
- Cleanup - Some old Gutenberg unused CSS
- Cleanup - Starter content: remove customizer defaults for wp_parse_args (since it was removed)
- Fixed - Post title visual representation when is hidden on single template (Gubenberg Plugin)
- Fixed - Post title bottom margin (when blockGap is set to 0 - as we use it)
- Updated - Gallery Block: CSS support for upcomming image innerBlocks

v5.0.6
- Cleanup - Customizer assets / Admin JS
- Updated - Better CSS/JS naming and folder structure
- Fixed - Textarea CSS
- Fixed - Activation Requirements

v5.0.0
- Complete rework to block based theme!!!

v4.1.7
- Updated - Add list-unstyled bootstrap class to comments listing by default
- Updated - Theme strings and errors: double check some missing translations
- Added - Gutenberg Columns block variations with Bootstrap Columns

v4.1.6
- Updated - CSS/JS Refactor with Webpack only setup
- Updated - Folder structure for css/js assets and assets enqueue across various locations
- Updated - ANR Captcha Integration improvements and added support for v3 Google Captcha
- Fixed - get_asset() The location param, __CLASS__ is used by default however was not passed
- Added - FontAwesome SVG Core library under wecodeart.FA window object
- Added - Scripts make_handle() method 2nd parameter for changing the namespace/class to build handle from

v4.1.55
- Fixed - Issue with call to undefined function woo_config() in WooCommerce Support class
- Fixed - WPSEO (Yoast) Primary Term, moved to own fiter under Support Class and adjusted the View
- Updated - Use get_term_link and get_term_list instead of get_the_category_list (deprecated)

v4.1.54
- Fixed - Gutenberg Core Blocks attributes compatability (for some of the blocks)
- Updated - MISC: Year to 2021 if the files message
- Updated - Set WooCommerce Columns for products via config file
- Updated - Core Blocks CSS